--- a/docker/images/nginx+php/config/nginx.conf
+++ b/docker/images/nginx+php/config/nginx.conf
@@ -38,11 +38,12 @@ http
 
 		location ~ \.php$
 		{
-      try_files $uri =404;
-      fastcgi_pass   unix:/var/run/php5-fpm.sock;
-      fastcgi_index  index.php;
-      fastcgi_param SCRIPT_FILENAME /var/www/web/$fastcgi_script_name;
-      include fastcgi_params;
-    }
+          try_files $uri =404;
+          fastcgi_pass   unix:/var/run/php5-fpm.sock;
+          fastcgi_index  index.php;
+          fastcgi_param ENV test;
+          fastcgi_param SCRIPT_FILENAME /var/www/web/$fastcgi_script_name;
+          include fastcgi_params;
+        }
 	}
 }
