--- a/docker/images/nginx+php/Dockerfile
+++ b/docker/images/nginx+php/Dockerfile
@@ -1,3 +1,6 @@
 FROM ebuildy/docker-nginx-php
 
+RUN apt-get update && apt-get install -y \
+php5-mcrypt
+
 COPY ./config/nginx.conf /etc/nginx/nginx.conf
