--- a/docker/infrastructures/api/docker-compose.yml
+++ b/docker/infrastructures/api/docker-compose.yml
@@ -10,6 +10,10 @@ web:
 
 mongo:
   build: images/mongo
+  ports:
+    - "27017:27017"
 
 elasticsearch:
   build: images/elasticsearch
+  ports:
+    - "9200:9200"
