--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "require": {
         "behat/behat": "3.0.*@dev",
-        "behat/mink": "1.7.*@dev",
-        "guzzlehttp/guzzle": "5.0.*@dev",
-        "emuse/behat-html-formatter": "dev-master"
+        "emuse/behat-html-formatter": "dev-master",
+        "facebook/webdriver": "dev-master",
+        "guzzlehttp/guzzle": "5.0.*@dev"
     },
     "repositories": [
 
